# one-min-ai-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.py
.agent/: rules.md
.gemini/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  orc-ai-approver.yml  orc-merge-override-note.yml  orc-merge-queue.yml  orc-pr-size-label.yml  orc-risk-label.yml  orc-superseded-check.yml
tests/: test_server.py
