[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "one-min-ai-gateway"
version = "0.1.1"
description = "OpenAI-compatible gateway for 1min.ai"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "deffenda" }]
dependencies = [
  "flask>=3.0,<4.0",
  "requests>=2.31,<3.0",
  "waitress>=3.0,<4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<10.0",
]

[project.scripts]
one-min-ai-gateway = "server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
